new_tests/semantics/scope/bad/021_CD4.cm

class A {
    public x:Int 
}

class B inherits A {
    public x:Int 
}
